<resources>
    <string name="app_name">Mus3D</string>

    <string name="action_settings">Instellingen</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_rajawali">RajawaliActivity</string>
    <string name="title_activity_settings">Instellingen</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_roll_selector">RoleSelector</string>
    <string name="roleSelector_btn_submit">Ga door</string>
    <string name="roleSelector_tv_head">Selecteer uw rol</string>
    <string name="roleSelector_tv_body">U kunt uw rol later nog veranderen via Instellingen.</string>
    <string name="roleSelector_rb_Roeier">Roeier</string>
    <string name="roleSelector_rb_Loods">Loods</string>
    <string name="cancel">Sluit</string>
    <string name="action_2D">2D</string>
    <string name="action_3D">3D</string>
    <string name="load_gps">Uw GPS coördinaten worden bepaald.</string>
    <string name="load_objects">De objecten worden geladen.</string>

    <string name="object_afmeerboei">Afmeerboei</string>
    <string name="object_bolder">Bolder</string>
    <string name="object_koningspaal">Koningspaal</string>
    <string name="object_ligplaats">Ligplaats</string>
    <string name="object_meerpaal">Meerpaal</string>
    <string name="object_onbekend">Onbekend</string>

    <string name="menu_open">Open menu</string>
    <string name="menu_close">Sluit menu</string>
    <string name="content_fragment">Start de app</string>
    <string name="title_activity_search">search</string>

    <string name="tutorial1">De app bestaat uit een 2D gedeelte en een 3D gedeelte. Swipe naar rechts om te beginnen met het 3D gedeelte.</string>
    <string name="tutorial2">De app heeft GPS nodig om te kunnen werken.</string>
    <string name="tutorial3">Beweeg de telefoon zijwaards om andere objecten te bekijken.</string>
    <string name="tutorial4">De objecten kunnen worden aangeraakt.</string>
    <string name="tutorial5">We gaan nu verder met de uitleg van het 2D gedeelte.</string>
    <string name="tutorial6">U kunt de kaart bewegen om andere objecten te bekijken.</string>
    <string name="tutorial7">U kunt de kaart uitzoomen om meer objecten te bekijken.</string>
    <string name="tutorial8">Selecteer het type waar u op wilt zoeken en selecteer vervolgens één of meerdere resultaten uit de lijst. Kies voor 2D of 3D en druk op start.</string>
    <string name="tutorial9">De objecten kunnen worden aangeraakt.</string>

    <string name="search_et_searchhint">Type de objectnaam</string>
    <string name="search_list_resultaten">Resultaten</string>
    <string name="search_btn_skip">Sla over</string>
    <string name="search_btn_search">Start</string>

    <string name="failed_to_load_db">De database kon niet worden geladen.</string>

    <string name="select_items_first">Selecteer eerst een object om te zoeken.</string>
    <string name="search_results_empty">Er zijn geen resultaten gevonden.</string>
    <string name="search_selected_empty">U heeft geen objecten geselecteerd.</string>

    <string name="legend_item_1">Afmeerboeien</string>
    <string name="legend_item_2">Bolders</string>
    <string name="legend_item_3">Koningspalen</string>
    <string name="legend_item_4">Ligplaatsen</string>
    <string name="legend_item_5">Meerpalen</string>
</resources>
