<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="right">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="32sp"
            android:text="@string/legend_item_1"
            android:textColor="@color/red"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/legend_item_1"
            android:orientation="horizontal"
            android:id="@+id/legend_item_1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="32sp"
            android:text="@string/legend_item_2"
            android:textColor="@color/red"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/legend_item_2"
            android:id="@+id/legend_item_2"
            android:orientation="horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="32sp"
            android:text="@string/legend_item_3"
            android:textColor="@color/red"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/legend_item_3"
            android:orientation="horizontal"
            android:textColor="@color/red"
            android:id="@+id/legend_item_3" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="32sp"
            android:text="@string/legend_item_4"
            android:textColor="@color/red"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/legend_item_4"
            android:orientation="horizontal"
            android:id="@+id/legend_item_4" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="32sp"
            android:text="@string/legend_item_5"
            android:textColor="@color/red"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/legend_item_5"
            android:orientation="horizontal"
            android:id="@+id/legend_item_5" />
    </LinearLayout>



</LinearLayout>