<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/menu_drawer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="mus3d.resist.com.mus3d.map"
        android:orientation="horizontal">

        <org.osmdroid.views.MapView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/mapview">
        </org.osmdroid.views.MapView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_afmeerboei"
                android:contentDescription=""/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClick"
                android:text="@string/object_afmeerboei"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bolder"
                android:contentDescription=""/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClick"
                android:text="@string/object_bolder"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_koningspaal"
                android:contentDescription=""/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClick"
                android:text="@string/object_koningspaal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_aanlegplaats"
                android:contentDescription=""/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClick"
                android:text="@string/object_ligplaats"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_meerpaal"
                android:contentDescription=""/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckBoxClick"
                android:text="@string/object_meerpaal"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>